Use cooky to store session

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,8 @@ kotlin.code.style=official
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+
+#AtomicFU
+kotlinx.atomicfu.enableJvmIrTransformation=true
+kotlinx.atomicfu.enableJsIrTransformation=true
+kotlinx.atomicfu.enableNativeIrTransformations=true
