--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ composeBom = "2024.03.00"
 compose-compiler = "1.5.11"
 coreKtx = "1.12.0"
 coroutine = "1.8.0"
+datastore = "1.0.0"
 espressoCore = "3.5.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -13,7 +14,7 @@ kodein-canard = "1.1.2"
 kotlin = "1.9.23"
 ktor = "2.3.9"
 lifecycleRuntimeKtx = "2.7.0"
-datastore = "1.0.0"
+navigation = "2.7.7"
 
 [libraries]
 atomicfu-gradle-plugin = { module = "org.jetbrains.kotlinx:atomicfu-gradle-plugin", version.ref = "atomicfuGradlePlugin" }
@@ -23,6 +24,8 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigation" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
